--- a/modules/ROOT/pages/maintenance/commands/rebuild-jsoncs3-indexes.adoc
+++ b/modules/ROOT/pages/maintenance/commands/rebuild-jsoncs3-indexes.adoc
@@ -5,8 +5,8 @@ WARNING: Use this command with absolute care. It is not intended to play around 
 [source,bash]
 ----
 NAME:
-   ocis ocis migrate rebuild-jsoncs3-indexes - repair and migrate jsoncs3 indexes
+   ocis migrate rebuild-jsoncs3-indexes - repair and migrate jsoncs3 indexes
 
 USAGE:
-   ocis ocis migrate rebuild-jsoncs3-indexes
+   ocis migrate rebuild-jsoncs3-indexes
 ----
