--- a/modules/ROOT/pages/deployment/wopi/wopi.adoc
+++ b/modules/ROOT/pages/deployment/wopi/wopi.adoc
@@ -9,6 +9,9 @@
 :wopi-wiki-url: https://en.wikipedia.org/wiki/Web_Application_Open_Platform_Interface
 :wopi-ms-url: https://learn.microsoft.com/en-us/openspecs/office_protocols/ms-wopi/6a8bb410-68ad-47e4-9dc3-6cf29c6b046b
 
+// since ocis 4.0 we can use teh second tab
+:use_tab_2: true
+
 == Introduction
 
 {description} For more details on possible configuration values see the xref:conf-examples/office/office-integration.adoc[Office Integration] document at the configuration examples. More information about the WOPI protocol can be found on {wopi-wiki-url}[Wikipedia,window=_blank] or {wopi-ms-url}[Microsoft,window=_blank].
@@ -75,7 +78,6 @@ image::deployment/wopi/wopi-overview.svg[WOPI Overview Diagram]
 
 Using git version name: `{compose_tab_1}`
 --
-ifdef::use_tab_2[]
 {compose_tab_2_tab_text}::
 +
 --
@@ -83,8 +85,6 @@ ifdef::use_tab_2[]
 
 Using git version name: `{compose_tab_2}`
 --
-endif::[]
-ifdef::use_tab_3[]
 {compose_tab_3_tab_text}::
 +
 --
@@ -92,7 +92,6 @@ ifdef::use_tab_3[]
 
 Using git version name: `{compose_tab_3}`
 --
-endif::[]
 ====
 +
 --
