--- a/modules/ROOT/pages/deployment/services/s-list/settings.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/settings.adoc
@@ -54,7 +54,17 @@ The settings service needs to know the ID's of service accounts but it doesn't n
 
 == Default Language
 
-The default language can be defined via `SETTINGS_DEFAULT_LANGUAGE` environment variable. If this variable is not defined, English will be used as default. The value has the ISO 639-1 format ("de", "en", etc.) and is limited by the list supported languages. This setting can be used to set the default language for invitation emails.
+Starting with Infinite Scale 5.0, the default language can be defined via the `OCIS_DEFAULT_LANGUAGE` environment variable. If this variable is not defined, English will be used as default. The value has the ISO 639-1 format ("de", "en", etc.) and is limited by the list supported languages. This setting can be used to set the default language for notification and invitation emails.
+
+The `OCIS_DEFAULT_LANGUAGE` setting impacts the `notification` and `userlog` services and the WebUI. Note that translations must exist for all named components to be presented correctly.
+
+* If  `OCIS_DEFAULT_LANGUAGE` **is not set**, the expected behavior is:
+** The `notification` and `userlog` services and the WebUI use English by default, until a user sets another language in the WebUI via menu:Account[Language].
+** If a user sets another language in the WebUI in menu:Account[Language], then the `notification` and `userlog` services and WebUI use the language defined by the user. If no translation is found, it falls back to English.
+
+* If  `OCIS_DEFAULT_LANGUAGE` **is set**, the expected behavior is:
+** The `notification` and `userlog` services and the WebUI use `OCIS_DEFAULT_LANGUAGE`  by default until, a user sets another language in the WebUI via menu:Account[Language].
+** If a user sets another language in the WebUI in menu:Account[Language], the `notification` and `userlog` services and WebUI use the language defined by the user. If no translation is found, it falls back to `OCIS_DEFAULT_LANGUAGE` and then to English.
 
 == Configuration
 
