--- a/modules/ROOT/pages/deployment/services/s-list/gateway.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/gateway.adoc
@@ -16,7 +16,7 @@
 
 == Caching
 
-The `gateway` service can use a configured store via `GATEWAY_STAT_CACHE_STORE`. Possible stores are:
+The `gateway` service can use a configured store via `GATEWAY_STAT_CACHE_STORE`.
 
 include::partial$multi-location/caching-list.adoc[]
 // you must not have one or more blank lines here as it breaks continuous numbering!
