--- a/modules/ROOT/pages/deployment/services/s-list/settings.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/settings.adoc
@@ -34,7 +34,7 @@ The settings service supports two different backends for persisting the data. Th
 
 When using `SETTINGS_STORE_TYPE=metadata`, the `settings` service caches the results of queries against the storage backend to provide faster responses. The content of this cache is independent of the cache used in the `storage-system` service as it caches directory listing and settings content stored in files.
 
-The store used for the cache can be configured using the `SETTINGS_CACHE_STORE` environment variable. Possible stores are:
+The store used for the cache can be configured using the `SETTINGS_CACHE_STORE` environment variable.
 
 include::partial$multi-location/caching-list.adoc[]
 // you must not have one or more blank lines here as it breaks continuous numbering!
